--- a/index.html
+++ b/index.html
@@ -183,28 +183,28 @@
       <section id="inspiracje-panie" class="container inspiracje">
         <h2>Inspiracje dla Pań</h2>
         <div class="grid">
-          <img src="images/MenInspo1.jpg" alt="Inspiration 1" />
-          <img src="images/menInspo2.webp" alt="Inspiration 2" />
-          <img src="images/menInspo3.webp" alt="Inspiration 3" />
-          <img src="images/menInspo4.webp" alt="Inspiration 4" />
-          <img src="images/menInspo5.webp" alt="Inspiration 5" />
-          <img src="images/menInspo6.webp" alt="Inspiration 6" />
-          <img src="images/MenInspo1.jpg" alt="Inspiration 7" />
-          <img src="images/menInspo2.webp" alt="Inspiration 8" />
+          <img src="images/wonemLook1.jpg" alt="Inspiration 1" />
+          <img src="images/wonemLook2.jpg" alt="Inspiration 2" />
+          <img src="images/wonemLook3.jpg" alt="Inspiration 3" />
+          <img src="images/wonemLook4.jpg" alt="Inspiration 4" />
+          <img src="images/wonemLook5.jpg" alt="Inspiration 5" />
+          <img src="images/wonemLook6.jpg" alt="Inspiration 6" />
+          <img src="images/wonemLook7.jpg" alt="Inspiration 7" />
+          <img src="images/wonemLook8.jpg" alt="Inspiration 8" />
         </div>
       </section>
 
       <section id="inspiracje-panowie" class="container inspiracje">
         <h2>Inspiracje dla Panów</h2>
         <div class="grid">
-          <img src="images/menInspo1.jpg" alt="Inspiration 1" />
-          <img src="images/menInspo2.webp" alt="Inspiration 2" />
-          <img src="images/menInspo3.webp" alt="Inspiration 3" />
-          <img src="images/menInspo4.webp" alt="Inspiration 4" />
-          <img src="images/menInspo5.webp" alt="Inspiration 5" />
-          <img src="images/menInspo6.webp" alt="Inspiration 6" />
-          <img src="images/menInspo7.jpg" alt="Inspiration 7" />
-          <img src="images/menInspo8.jpg" alt="Inspiration 8" />
+          <img src="images/menOutfits1.jpg" alt="Inspiration 1" />
+          <img src="images/menOutfits2.jpg" alt="Inspiration 2" />
+          <img src="images/menOutfits3.jpg" alt="Inspiration 3" />
+          <img src="images/menOutfits4.jpg" alt="Inspiration 4" />
+          <img src="images/menOutfits5.jpg" alt="Inspiration 5" />
+          <img src="images/menOutfits6.jpg" alt="Inspiration 6" />
+          <img src="images/menOutfits7.jpg" alt="Inspiration 7" />
+          <img src="images/menOutfits8.jpg" alt="Inspiration 8" />
         </div>
       </section>
 
